--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e7a66b">  <td>19/10/05 13:51:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SocialStudiesBookTest.ClickOnTheFirstSocailBook()[pri:2, instance:com.amazon.qa.testcases.SocialStudiesBookTest@2d209079]">ClickOnTheFirstSocailBook</td> 
-  <td>main@940060004</td>   <td></td> </tr>
-<tr bgcolor="e7a66b">  <td>19/10/05 13:50:10</td>   <td>-77020</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SocialStudiesBookTest.setup()[pri:0, instance:com.amazon.qa.testcases.SocialStudiesBookTest@2d209079]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@940060004</td>   <td></td> </tr>
-<tr bgcolor="e7a66b">  <td>19/10/05 13:50:47</td>   <td>-40086</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SocialStudiesBookTest.setup()[pri:0, instance:com.amazon.qa.testcases.SocialStudiesBookTest@2d209079]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@940060004</td>   <td></td> </tr>
-<tr bgcolor="e7a66b">  <td>19/10/05 13:50:46</td>   <td>-40647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SocialStudiesBookTest.verificationOfSocialBookTitlePage()[pri:1, instance:com.amazon.qa.testcases.SocialStudiesBookTest@2d209079]">verificationOfSocialBookTitlePage</td> 
-  <td>main@940060004</td>   <td></td> </tr>
+<tr bgcolor="e7a66b">  <td>19/10/06 15:28:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartSectionTest.SelectionOfQauntity()[pri:1, instance:com.amazon.qa.testcases.CarttestCases.CartSectionTest@2d209079]">SelectionOfQauntity</td> 
+  <td>main@785992331</td>   <td></td> </tr>
+<tr bgcolor="e7a66b">  <td>19/10/06 15:27:46</td>   <td>-34653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CartSectionTest.setup()[pri:0, instance:com.amazon.qa.testcases.CarttestCases.CartSectionTest@2d209079]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@785992331</td>   <td></td> </tr>
 </table>
